# aws-sagemaker-databricks-feature-store

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
compose/: docker-compose.yml  localstack-init.sh  postgres-init.sql
config/: feature-definitions.yaml  monitor-config.yaml
dashboards/cloudwatch/: feature_platform.json
dashboards/grafana/: feature_platform.json
docs/: ARCHITECTURE.md  COST_ANALYSIS.md  FEATURE_AUTHORING.md  LOCAL_DEVELOPMENT.md  MODEL_MONITORING.md  ONLINE_OFFLINE_PARITY.md  POINT_IN_TIME_JOINS.md  RUNBOOK.md  SAGEMAKER_VS_DATABRICKS.md
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/envs/: dev.backend.hcl.example  dev.tfvars.example  prod.tfvars.example
infra/terraform/modules/apigw/: main.tf
infra/terraform/modules/databricks/: main.tf
infra/terraform/modules/dynamodb/: main.tf
infra/terraform/modules/glue/: main.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/kinesis/: main.tf
infra/terraform/modules/kms/: main.tf
infra/terraform/modules/lambda/: main.tf
infra/terraform/modules/mlflow/: main.tf
infra/terraform/modules/monitoring/: main.tf
infra/terraform/modules/s3/: main.tf
infra/terraform/modules/sagemaker_feature_store/: main.tf
infra/terraform/modules/sagemaker_inference/: main.tf
infra/terraform/modules/sagemaker_model_monitor/: main.tf
infra/terraform/modules/sagemaker_training/: main.tf
infra/terraform/modules/secrets/: main.tf
infra/terraform/modules/vpc/: main.tf
notebooks/: 01_databricks_fs_pipeline.py  02_databricks_ml_training.py  03_drift_dashboard.py
scripts/: check_drift.sh  deploy_endpoint.sh  feast_apply.sh  validate_feature_views.py
src/feast_repo/: __init__.py  feature_store.yaml
src/feast_repo/data_sources/: __init__.py  sources.py
src/feast_repo/entities/: __init__.py  products.py  users.py
src/feast_repo/feature_views/: __init__.py  product_features.py  user_lifetime.py  user_recency.py
src/features/: __init__.py  cli.py
src/features/core/: __init__.py  types.py
src/features/lineage/: openlineage.py
src/features/monitoring/: __init__.py  baseline_generator.py  drift_detector.py
src/features/registry/: __init__.py  feast_sync.py
src/features/serving/: __init__.py  online_lookup.py  predictor.py  similarity_search.py
src/features/sinks/: __init__.py  databricks_fs_sink.py  dual_sink.py  sagemaker_fs_sink.py  vector_store_sink.py
src/features/sources/: __init__.py  kinesis_source.py  postgres_source.py  s3_source.py
src/features/training/: __init__.py  databricks_runner.py  sagemaker_runner.py  train.py
src/features/transforms/: __init__.py  aggregations.py  embeddings.py
src/features/utils/: __init__.py  logging_config.py  metrics.py  secrets.py  spark_session.py
src/lambdas/: __init__.py  drift_alerter.py  streaming_feature_pipeline.py
tests/: conftest.py
tests/unit/: test_aggregations.py  test_drift_detection.py  test_openlineage_feature.py  test_similarity_search.py  test_types.py  test_vector_store_sink.py
